social back and fix the width so right hand panel doesnt get wrapped

--- a/src/countdown/static/countdown/css/styles.css
+++ b/src/countdown/static/countdown/css/styles.css
@@ -41,6 +41,9 @@ body {
     width: 298px;
 }
 
+.container_block {
+    width: 1200px;
+}
 .main_content {
     float: left;
 }
